📝 content: obsidian commit

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -24,14 +24,14 @@
 
 				{{ collections.all | eleventyNavigation | eleventyNavigationToHtml | safe }}
 
-				{# {% set navPages = collections.all | eleventyNavigation %}
+				{% set navPages = collections.all | eleventyNavigation %}
 				<ul>
 					{%- for entry in navPages %}
 						<li{% if entry.url == page.url %} class="my-active-class"{% endif %}>
 							<a href="{{ entry.url | url }}">{{ entry.title }}</a>
 						</li>
 					{%- endfor %}
-				</ul> #}
+				</ul>
 			</nav>
 
 			<h1>{{ title }}</h1>
