--- a/src/garden.njk
+++ b/src/garden.njk
@@ -2,7 +2,18 @@
 layout: base.njk
 title: Digital garden
 eleventyNavigation:
-	key: Digital garden
+  key: Digital garden
+  order: 3
 ---
 
 A collection of my ideas that I'm nurturing out in the open. The notes range from seedlings, which are fresh out of my mind, to budding, which are developing, to evergreen, which are polished ideas.
+
+{% set notes = collections.all | eleventyNavigation("Digital garden") %}
+
+<ul>
+  {%- for entry in notes %}
+    <li>
+      <a href="{{ entry.url | url }}">{{ entry.title }}</a>
+    </li>
+  {%- endfor %}
+</ul>
