📝 content: obsidian commit

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,7 +8,7 @@
 		<title>{{ title }} | Elly Loel</title>
 
 		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
-		<link rel="stylesheet" href="/assets/css/style.css">
+		<link rel="stylesheet" href="/assets/styles/default.css">
 	</head>
 	<body>
 		<header role="banner" class="site-header">
