📝 content: obsidian commit

--- a/src/_assets/styles/default.scss
+++ b/src/_assets/styles/default.scss
@@ -5,7 +5,7 @@
   }
 
   :visited {
-    color: lch(60.51768357490391, 71.43476962425623, 327.17459892721234);
+    color: hsl(300deg 59% 62%);
   }
 
   :link {
