--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -15,7 +15,7 @@
 			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
 
 			<nav role="navigation">
-				<a class="site-logo{% if "/" == page.url %} nav-active{% endif %}" href="/" rel="home" title="to homepage">
+				<a class="site-logo" href="/" rel="home" title="to homepage"{% if "/" == page.url %} data-state="active"{% endif %}>
 					<!-- link to home: http://microformats.org/wiki/rel-home -->
 					<h1>
 						&lt;e//y&gt;
