📝 content: obsidian commit

--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -3,7 +3,7 @@
 {# General #}
 <meta name="description" content="{{ description or site.description }}">
 <link rel="canonical" href="{{ absolutePageUrl }}">
-<meta name="author" content="{{ site.author }}">
+<meta name="author" content="{{ site.author.name }}">
 <meta name="generator" content="{{ eleventy.generator }}">
 
 {# Open Graph #}
