--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -23,13 +23,13 @@
 		{% include "header.njk" %}
 
 		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
-		<main id="content" role="main" tabindex="-1" class="wrapper">
-			<header>
-				<h1>{{ title }}</h1>
-			</header>
-			<article>
-				{{ content | safe }}
-			</article>
+		<main id="content" role="main" tabindex="-1" class="wrapper flow">
+			{% if page.url !== "/" %}
+				<header>
+					<h1>{{ title }}</h1>
+				</header>
+			{% endif %}
+			{{ content | safe }}
 		</main>
 
 		{% include "footer.njk" %}
