📝 content: obsidian commit

--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,7 @@ title: Home
 		<p>A lego model designed to look like myself.</p>
 	</canvas>
 
-	<css-doodle>
+	{# <css-doodle>
 		@grid: 1 / 500px;
 		background: @shaders(
 			texture1 {
@@ -38,7 +38,7 @@ title: Home
 				}
 			}
 		);
-	</css-doodle>
+	</css-doodle> #}
 </header>
 
 {% feedBlock
