--- a/src/css/blocks/_lego.scss
+++ b/src/css/blocks/_lego.scss
@@ -1,6 +1,6 @@
 .lego {
-  inline-size: 100% !important;
-  block-size: 300px !important;
+  // inline-size: 100% !important;
+  // block-size: 300px !important;
   object-fit: cover;
   border-radius: var(--radius-blob-3);
   background-image: radial-gradient(
