--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -8,7 +8,7 @@
 		}
 		:after {
 			content: \@hex.@r(0x2500, 0x257f);
-			color: hsla(@r360, 70%, 70%, @r.2);
+			color: var(--accent-@round.@rand(0, 3));
 			font-size: 8vmin;
 		}
 	</css-doodle>
