--- a/src/index.njk
+++ b/src/index.njk
@@ -3,66 +3,68 @@ layout: base
 title: Home
 ---
 
-<header class="[ hero ]">
-	<h1 aria-label="Hi, I'm Elly. I like creating delightful, magical, and accessible art with code.">
-		<span class="detitlify">Hi, I’m <stylized-text label="Elly" class="[ logo-inline ]">&lt;e//y&gt;</stylized-text>
-		</span>
-		<span>I like creating <span class="stroke" style="--color: var(--accent-solid);">delightful</span>, <span class="stroke" style="--color: var(--accent-solid);">magical</span>, and <span class="stroke" style="--color: var(--accent-solid);">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
-	</h1>
+<div class="[ home ]">
+	<header class="[ hero ]">
+		<h1 aria-label="Hi, I'm Elly. I like creating delightful, magical, and accessible art with code.">
+			<span class="detitlify">Hi, I’m <stylized-text label="Elly" class="[ logo-inline ]">&lt;e//y&gt;</stylized-text>
+			</span>
+			<span>I like creating <span class="stroke" style="--color: var(--accent-solid);">delightful</span>, <span class="stroke" style="--color: var(--accent-solid);">magical</span>, and <span class="stroke" style="--color: var(--accent-solid);">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
+		</h1>
 
-	<canvas id="canvas3d" class="[ lego ]">
-		<p>A 3D modeled Lego Minifigure designed to look like myself.</p>
-	</canvas>
-</header>
+		<canvas id="canvas3d" class="[ lego ]">
+			<p>A 3D modeled Lego Minifigure designed to look like myself.</p>
+		</canvas>
+	</header>
 
-{% feedBlock
-title = "Articles",
-url = "/blog/" %}
-{% set blog = collections.blog | sliceCollection(3) %}
-{%- for post in blog %}
-	{% feedItem
-	title = post.data.title,
-	url = post.url,
-	excerpt = post.data.page.excerpt
+	{% feedBlock
+	title = "Articles",
+	url = "/blog/" %}
+	{% set blog = collections.blog | sliceCollection(3) %}
+	{%- for post in blog %}
+		{% feedItem
+		title = post.data.title,
+		url = post.url,
+		excerpt = post.data.page.excerpt
  %}
-{%- endfor %}
-{% endfeedBlock %}
+	{%- endfor %}
+	{% endfeedBlock %}
 
-{% feedBlock
-title = "Projects",
-url = "/projects/" %}
-{% set projects = collections.projects | sliceCollection(3) %}
-{%- for project in projects %}
-	{% feedItem
-	title = project.data.title,
-	url = project.url,
-	excerpt = project.data.page.excerpt
+	{% feedBlock
+	title = "Projects",
+	url = "/projects/" %}
+	{% set projects = collections.projects | sliceCollection(3) %}
+	{%- for project in projects %}
+		{% feedItem
+		title = project.data.title,
+		url = project.url,
+		excerpt = project.data.page.excerpt
  %}
-{%- endfor %}
-{% endfeedBlock %}
+	{%- endfor %}
+	{% endfeedBlock %}
 
-{% feedBlock
-title = "Notes",
-url = "/garden/" %}
-{% set notes = collections.garden | sliceCollection(3) %}
-{%- for note in notes %}
-	{% feedItem
-	title = note.data.title,
-	url = note.url,
-	excerpt = note.data.page.excerpt
+	{% feedBlock
+	title = "Notes",
+	url = "/garden/" %}
+	{% set notes = collections.garden | sliceCollection(3) %}
+	{%- for note in notes %}
+		{% feedItem
+		title = note.data.title,
+		url = note.url,
+		excerpt = note.data.page.excerpt
  %}
-{%- endfor %}
-{% endfeedBlock %}
+	{%- endfor %}
+	{% endfeedBlock %}
 
-{% feedBlock
-title = "Bookmarks",
-url = "/bookmarks/" %}
-{% set bookmarks = collections.bookmarks | sliceCollection(3) %}
-{%- for bookmark in bookmarks %}
-	{% feedItem
-	title = bookmark.data.title,
-	url = bookmark.url,
-	excerpt = bookmark.data.page.excerpt
+	{% feedBlock
+	title = "Bookmarks",
+	url = "/bookmarks/" %}
+	{% set bookmarks = collections.bookmarks | sliceCollection(3) %}
+	{%- for bookmark in bookmarks %}
+		{% feedItem
+		title = bookmark.data.title,
+		url = bookmark.url,
+		excerpt = bookmark.data.page.excerpt
  %}
-{%- endfor %}
-{% endfeedBlock %}
+	{%- endfor %}
+	{% endfeedBlock %}
+</div>
