--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -29,8 +29,6 @@ body {
 }
 
 main {
-  display: grid;
-  gap: var(--size-8);
   margin-block: var(--size-10);
 }
 
@@ -83,11 +81,6 @@ kbd,
 samp,
 pre {
   font-family: "JetBrains Mono", var(--font-mono);
-}
-
-:not(pre) > code,
-kbd {
-  white-space: nowrap;
 }
 
 pre {
@@ -354,6 +347,7 @@ menu {
 @import "utilities/flex-col";
 @import "utilities/flex";
 @import "utilities/flow";
+@import "utilities/grid";
 @import "utilities/panel";
 @import "utilities/radius";
 @import "utilities/stroke";
@@ -367,6 +361,7 @@ menu {
 @import "blocks/feed-block";
 @import "blocks/footer";
 @import "blocks/hero";
+@import "blocks/home";
 @import "blocks/icon-button";
 @import "blocks/lego";
 @import "blocks/logo";
