--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -358,6 +358,7 @@ menu {
 //// Blocks
 @import "blocks/button";
 @import "blocks/card";
+@import "blocks/emoji";
 @import "blocks/feed-block";
 @import "blocks/footer";
 @import "blocks/hero";
