📝 content: obsidian commit

--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -16,6 +16,7 @@
 
 		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
 		<link rel="stylesheet" href="/@input/css/global.scss">
+		<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css">
 		<script>
 			// if there's a color-scheme id in localstorage, use it, if not use auto.
 			document
