📝 content: obsidian commit

--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -17,6 +17,8 @@
 		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
 		<link rel="stylesheet" href="/@input/css/global.scss">
 		<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css">
+		{# <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="https://unpkg.com/prism-theme-night-owl@1.4.0/build/style.css">
+		<link rel="stylesheet" media="(prefers-color-scheme: light)" href="https://unpkg.com/prism-theme-night-owl@1.4.0/build/light.css"> #}
 		<script>
 			// if there's a color-scheme id in localstorage, use it, if not use auto.
 			document
