📝 content: obsidian commit

--- a/src/css/blocks/_theme-switcher.scss
+++ b/src/css/blocks/_theme-switcher.scss
@@ -1,6 +1,10 @@
 .theme-switcher {
   --size: auto;
 
+  &:not(:defined) {
+    display: none;
+  }
+
   & > .theme-switcher-radio-group {
     inline-size: fit-content;
     justify-self: center;
