--- a/src/feeds/bookmarks.rss.njk
+++ b/src/feeds/bookmarks.rss.njk
@@ -1,5 +1,5 @@
 ---
-  permalink: /public/articles.rss
+  permalink: /public/bookmarks.rss
   eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
@@ -7,10 +7,10 @@
 	<channel>
 		<title>{{ site.title }}</title>
 		<link>{{ site.url }}</link>
-		<atom:link href="{{ '/articles.rss' | absoluteUrl(site.url) }}" rel="self" type="application/rss+xml"/>
+		<atom:link href="{{ '/bookmarks.rss' | absoluteUrl(site.url) }}" rel="self" type="application/rss+xml"/>
 		<description>{{ site.description }}</description>
 		<language>{{ site.lang }}</language>
-		{%- for post in collections.blog | reverse %}
+		{%- for post in collections.bookmarks | reverse %}
 			{%- set absolutePostUrl = post.url | absoluteUrl(site.url) %}
 			<item>
 				<title>{{ post.data.title }}</title>
