--- a/src/feeds/articles.json.njk
+++ b/src/feeds/articles.json.njk
@@ -1,5 +1,5 @@
 ---
-  permalink: /public/feed.json
+  permalink: /public/articles.json
   eleventyExcludeFromCollections: true
 ---
 {
@@ -7,7 +7,7 @@
   "title": "{{ site.title }}",
   "language": "{{ site.lang }}",
   "home_page_url": "{{ site.url }}",
-  "feed_url": "{{ '/feed.json' | absoluteUrl(site.url) }}",
+  "feed_url": "{{ '/articles.json' | absoluteUrl(site.url) }}",
   "description": "{{ site.description }}",
   "author": {
     "name": "{{ site.author.name }}",
