--- a/src/feeds/bookmarks.json.njk
+++ b/src/feeds/bookmarks.json.njk
@@ -1,5 +1,5 @@
 ---
-  permalink: /public/notes.json
+  permalink: /public/bookmarks.json
   eleventyExcludeFromCollections: true
 ---
 {
@@ -7,14 +7,14 @@
   "title": "{{ site.title }}",
   "language": "{{ site.lang }}",
   "home_page_url": "{{ site.url }}",
-  "feed_url": "{{ '/notes.json' | absoluteUrl(site.url) }}",
+  "feed_url": "{{ '/bookmarks.json' | absoluteUrl(site.url) }}",
   "description": "{{ site.description }}",
   "author": {
     "name": "{{ site.author.name }}",
     "url": "{{ site.author.url }}"
   },
   "items": [
-    {%- for post in collections.garden | reverse %}
+    {%- for post in collections.bookmarks | reverse %}
   {%- set absolutePostUrl = post.url | absoluteUrl(site.url) %}
     {
       "id": "{{ absolutePostUrl }}",
