--- a/src/feeds/projects.atom.njk
+++ b/src/feeds/projects.atom.njk
@@ -1,20 +1,20 @@
 ---
-  permalink: /public/notes.atom
+  permalink: /public/projects.atom
   eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ site.url }}">
 	<title>{{ site.title }}</title>
 	<subtitle>{{ site.description }}</subtitle>
-	<link href="{{ '/notes.atom' | absoluteUrl(site.url) }}" rel="self"/>
+	<link href="{{ '/projects.atom' | absoluteUrl(site.url) }}" rel="self"/>
 	<link href="{{ site.url }}"/>
-	<updated>{{ collections.garden | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
+	<updated>{{ collections.projects | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
 	<id>{{ site.url }}</id>
 	<author>
 		<name>{{ site.author.name }}</name>
 		<email>{{ site.author.email }}</email>
 	</author>
-	{%- for post in collections.garden | reverse %}
+	{%- for post in collections.projects | reverse %}
 		{%- set absolutePostUrl = post.url | absoluteUrl(site.url) %}
 		<entry>
 			<title>{{ post.data.title }}</title>
