--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,7 @@
 ---
 layout: base-without-header
 title: Home
+description: Hi, I’m Elly. I like creating delightful, magical, and accessible art with code.
 ---
 
 <div class="[ home ]">
