--- a/src/index.njk
+++ b/src/index.njk
@@ -12,9 +12,11 @@ description: Hi, I’m Elly. I like creating delightful, magical, and accessible
 			<span>I like creating <span class="stroke" style="--color: var(--accent-solid);">delightful</span>, <span class="stroke" style="--color: var(--accent-solid);">magical</span>, and <span class="stroke" style="--color: var(--accent-solid);">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
 		</h1>
 
-		<canvas id="canvas3d" class="[ lego ]">
-			<p>A 3D modeled Lego Minifigure designed to look like myself.</p>
-		</canvas>
+		<div>
+			<canvas id="canvas3d" class="[ lego ]">
+				<p>A 3D modeled Lego Minifigure designed to look like myself.</p>
+			</canvas>
+		</div>
 	</header>
 
 	{% feedBlock
